<resources>
    <string name="app_name">Converter</string>
    <string name="converter">Converter</string>
    <string name="weight_button">Weight</string>
    <string name="length_button">Length</string>
    <string name="temp_button">Temperature</string>
    <string name="weight_conversion">Weight Conversion</string>
    <string name="gram">Gram</string>
    <string name="kilogram">Kilo</string>
    <string name="tonne">Tonne</string>
    <string name="ounce">Ounce</string>
    <string name="calculateW">Calculate</string>
    <string name="length_conversion">Length</string>
    <string name="meter">Meter</string>
    <string name="kilometer">Kilo</string>
    <string name="inch">Inch</string>
    <string name="foot">Foot</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="kilo">Kilo</string>
    <string name="centimeter">centi</string>
    <string name="calculateL">Calculate</string>
    <string name="temperature_conversion">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="calculateT">Calculate</string>


</resources>
