<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.admin.converter.MainActivity">

    <TextView
        android:id="@+id/titleConverter"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:text="@string/converter"
        android:textColor="#FF5722"
        android:textSize="60sp" />

    <Button
        android:id="@+id/buttonW"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_below="@+id/titleConverter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/weight_button"
        android:background="#FFC400"/>

    <Button
        android:id="@+id/buttonL"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_below="@+id/buttonW"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/length_button"
        android:background="#FF9100"/>

    <Button
        android:id="@+id/buttonT"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_below="@+id/buttonL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/temp_button"
        android:background="#FF6D00"/>

</RelativeLayout>
