<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.converter.WeightActivity">

    <TextView
        android:id="@+id/title_weight"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:text="@string/weight_conversion"
        android:textColor="#FFC400"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/Gram"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_weight"
        android:layout_marginTop="28dp"
        android:padding="10dp"
        android:text="@string/gram"
        android:textSize="30sp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/edit_gram"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Gram"
        android:ems="10"
        android:inputType="numberDecimal" />


    <TextView
        android:id="@+id/kilogram"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/Gram"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Gram"
        android:layout_below="@+id/Gram"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/kilogram"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_kilogram"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/kilogram"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tonne"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/kilogram"
        android:layout_marginTop="22dp"
        android:padding="10dp"
        android:text="@string/tonne"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_tonne"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/tonne"
        android:layout_alignLeft="@+id/edit_kilogram"
        android:layout_alignStart="@+id/edit_kilogram"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/ounce"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tonne"
        android:layout_marginTop="22dp"
        android:padding="10dp"
        android:text="@string/ounce"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_Ounce"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/edit_tonne"
        android:layout_alignStart="@+id/edit_tonne"
        android:layout_alignTop="@+id/ounce"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_calW"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="#000000"
        android:text="@string/calculateW"
        android:textColor="#FFC400"
        android:textSize="20sp" />


</RelativeLayout>
