<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.converter.LengthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_length"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#000000"
            android:text="@string/length_conversion"
            android:textColor="#FFC400"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="-20dp"
            tools:layout_editor_absoluteY="-2dp" />

        <TextView
            android:id="@+id/meter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title_length"
            android:layout_marginTop="28dp"
            android:padding="10dp"
            android:text="@string/meter"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_meter"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/meter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Centimeter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/meter"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/centimeter"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_centimeter"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/Centimeter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Kilometer"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Centimeter"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/kilo"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_kilometer"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/Kilometer"
            android:layout_alignLeft="@+id/edit_centimeter"
            android:layout_alignStart="@+id/edit_centimeter"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Inch"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Kilometer"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/inch"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_inch"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/Inch"
            android:layout_alignLeft="@+id/edit_kilometer"
            android:layout_alignStart="@+id/edit_kilometer"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Foot"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Inch"
            android:layout_marginTop="18dp"
            android:padding="10dp"
            android:text="@string/foot"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_foot"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/edit_inch"
            android:layout_alignStart="@+id/edit_inch"
            android:layout_alignTop="@+id/Foot"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Mile"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Foot"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/mile"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_mile"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/edit_foot"
            android:layout_alignStart="@+id/edit_foot"
            android:layout_alignTop="@+id/Mile"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/Yard"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Mile"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/yard"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_yard"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/edit_mile"
            android:layout_alignStart="@+id/edit_mile"
            android:layout_alignTop="@+id/Yard"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button_calL"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#000000"
            android:layout_below="@+id/Yard"
            android:text="@string/calculateL"
            android:textColor="#FFC400"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>



