<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.converter.TemperatureActivity">

    <TextView
        android:id="@+id/title_temperature"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:text="@string/temperature_conversion"
        android:textColor="#FFC400"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/celsius"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/edit_celsius"
        android:layout_alignStart="@+id/edit_celsius"
        android:layout_below="@+id/title_temperature"
        android:layout_marginTop="26dp"
        android:padding="10dp"
        android:text="@string/celsius"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_celsius"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/celsius"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="numberSigned"  />

    <TextView
        android:id="@+id/fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/edit_celsius"
        android:layout_alignStart="@+id/edit_celsius"
        android:layout_below="@+id/edit_celsius"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:text="@string/fahrenheit"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_fahrenheit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/fahrenheit"
        android:layout_alignStart="@+id/fahrenheit"
        android:layout_below="@+id/fahrenheit"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="numberSigned"  />

    <Button
        android:id="@+id/button_calT"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/calculateT"
        android:background="#FFC400"/>



</RelativeLayout>
